force-app/main/default/objects/RE_MidDay_Helper__c/RE_MidDay_Helper__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE_MidDay_Helper</label>
</CustomObject>