force-app/main/default/objects/RE_MidDay_Helper__c/fields/RE_Index__c.field-meta.xml
<CustomField>
    <fullName>RE_Index__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>