force-app/main/default/objects/RE_MidDay_Helper__c/fields/RE_MidDayOutput__c.field-meta.xml
<CustomField>
    <fullName>RE_MidDayOutput__c</fullName>
    <label>MidDayOutput</label>
    <length>50</length>
    <type>Text</type>
</CustomField>