force-app/main/default/objects/RE_MidDay_Helper__c/fields/RE_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>RE_Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>