force-app/main/default/objects/RE_MidDay_Helper__c/fields/RE_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Code__c</fullName>
    <label>Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>