force-app/main/default/objects/RE_MidDay_Helper__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Product__c</columns>
    <columns>RE_MidDayOutput__c</columns>
    <columns>RE_Multiplier__c</columns>
    <columns>RE_Region__c</columns>
    <columns>RE_Index__c</columns>
    <columns>RE_Product_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>